使用splitview，并新建两个page，一个作为写作页面，另一个作为App的设置页面

--- a/MyBlog/MainPage.xaml
+++ b/MyBlog/MainPage.xaml
@@ -8,6 +8,41 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <RelativePanel>
+            <Button Name="HamburgerButton" 
+                    RelativePanel.AlignLeftWithPanel="True"
+                    FontFamily="Segoe MDL2 Assets"
+                    FontSize="36"
+                    Content="&#xE700;"
+                    Click="HamburgerButton_Click"/>
+            <TextBlock Name="PageTitle" FontSize="24" FontWeight="Bold" RelativePanel.RightOf="HamburgerButton"/>
+        </RelativePanel>
+        <SplitView Name="MySV" Grid.Row="1" DisplayMode="CompactOverlay"
+                   OpenPaneLength="200"
+                   CompactPaneLength="56">
+            <SplitView.Pane>
+                <ListBox SelectionMode="Single" SelectionChanged="ListBox_SelectionChanged">
+                    <ListBoxItem Name="Home">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="40" Text="&#xE80F;"/>
+                            <TextBlock FontSize="24" Text="Home" Margin="20,0,0,0"/>
+                        </StackPanel>
+                    </ListBoxItem>
+                    <ListBoxItem Name="Setting">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="36" Text="&#xE1CE;"/>
+                            <TextBlock FontSize="24" Text="Setting" Margin="20,0,0,0"/>
+                        </StackPanel>
+                    </ListBoxItem>
+                </ListBox>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Frame Name="MyFrame"></Frame>
+            </SplitView.Content>
+        </SplitView>
     </Grid>
 </Page>
