实现保存markdow文件功能

--- a/MyBlog/MainPage.xaml
+++ b/MyBlog/MainPage.xaml
@@ -41,7 +41,7 @@
                 </ListBox>
             </SplitView.Pane>
             <SplitView.Content>
-                <Frame Name="MyFrame"></Frame>
+                <Frame Name="MyFrame" Margin="20,0,0,0"></Frame>
             </SplitView.Content>
         </SplitView>
     </Grid>
