--- a/MyBlog/BlogWriting.xaml
+++ b/MyBlog/BlogWriting.xaml
@@ -9,74 +9,76 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="140"/>
+            <RowDefinition Height="240"/>
             <RowDefinition Height="*"/>
-
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Vertical" Margin="20,0,0,0">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="70"></RowDefinition>
-                    <RowDefinition Height="70"></RowDefinition>
+                    <RowDefinition Height="60"></RowDefinition>
+                    <RowDefinition Height="60"></RowDefinition>
+                    <RowDefinition Height="60"></RowDefinition>
+                    <RowDefinition Height="60"></RowDefinition>
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal" Grid.Row="0">
+                    <DatePicker Name="publicDate"
+                                Width="330"
+                                VerticalAlignment="Center"
+                                Margin="20,0,0,0"
+                                Orientation="Vertical"/>
+                    <ComboBox Name="typeSelectBox"
+                                  Margin="20,0,0,0"
+                                  VerticalAlignment="Center"
+                                  Width="150">
+                        <ComboBoxItem Content="tech" IsSelected="True"></ComboBoxItem>
+                        <ComboBoxItem Content="life"></ComboBoxItem>
+                        <ComboBoxItem Content="tool"></ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Grid.Row="1">
                     <TextBox Name="blogTitle"
                              Width="500px"
                              Height="30"
                              Margin="20,0,0,0"
                              PlaceholderText="title"></TextBox>
-                    <DatePicker Name="publicDate"
-                        Width="400"
-                        VerticalAlignment="Center"
-                                Margin="20,0,0,0"/>
-                    <ListBox Width="Auto" Margin="20,0,0,0" Name="typeList">
-                        <ComboBox Name="typeSelectBox" Width="Auto"                                  
-                                  VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <ComboBoxItem Content="tech" IsSelected="True"></ComboBoxItem>
-                            <ComboBoxItem Content="life"></ComboBoxItem>
-                            <ComboBoxItem Content="tool"></ComboBoxItem>
-                        </ComboBox>
-                    </ListBox>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Grid.Row="1">
-
+                <StackPanel Orientation="Horizontal" Grid.Row="2">
                     <TextBox Name="blogTags"
-                             Width="400px" Height="30"
-                             Margin="20,0,0,0" PlaceholderText="tags"></TextBox>
+                             Width="500px" 
+                             Height="30"
+                             Margin="20,0,0,0" 
+                             PlaceholderText="tags"></TextBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Grid.Row="3">
                     <TextBox Name="blogDescription"
-                             Width="500px" Height="30"
-                             Margin="20,0,0,0" PlaceholderText="description"></TextBox>
-                    <Button Margin="35,9,0,0"
+                             Width="500px" 
+                             Height="30"
+                             Margin="20,0,0,0" 
+                             PlaceholderText="description"></TextBox>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Margin="20,0,0,0">
+            <StackPanel Orientation="Horizontal">
+                <TextBox
+                    Name="blogContent"
+                    HorizontalAlignment="Center"
+                    PlaceholderText="type blog content"
+                    Margin="20,0,0,0"
+                    Width="500"
+                    TextWrapping="Wrap"></TextBox>
+                <TextBlock Name="textBlockFileName" Width="300" Height="300" FontSize="30" Margin="12" TextWrapping="Wrap"/>
+            </StackPanel>
+            <StackPanel>
+                <Button Margin="20,0,0,0"
                         Background="Green"
                         Name="SaveButton"
                         Click="SaveButton_Click"
                         Width="100px"
                         Content="Save"
-                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-
-                </StackPanel>
-            </Grid>
-
-
-
-        </StackPanel>
-        <StackPanel Grid.Row="1" Margin="20,0,0,0">
-            <StackPanel Orientation="Horizontal">
-                <TextBox
-                    Name="blogContent"
-                    Height="500px"
-                    Width="1050px"
-                    HorizontalAlignment="Center"
-                    PlaceholderText="type blog content"
-                    Margin="20,20,0,0"
-                    TextWrapping="Wrap"></TextBox>
-                <TextBlock Name="textBlockFileName" Width="300" Height="300" FontSize="30" Margin="12" TextWrapping="Wrap"/>
+                        HorizontalAlignment="Left" VerticalAlignment="Center"/>
             </StackPanel>
         </StackPanel>
-
-
-
-
     </Grid>
 </Page>
